--- a/detail.html
+++ b/detail.html
@@ -2,7 +2,8 @@
 
 <head>
     <title>Detail</title>
-    <link href="styles/detail.css" rel="stylesheet"/>
+    <link href="styles/index.css" rel="stylesheet" />
+    <link href="styles/detail.css" rel="stylesheet" />
 </head>
 
 <body>
@@ -10,15 +11,41 @@
         <div>
             <div class="logoClass">
                 <img src='assests/images/logo.png' alt='logo' id="logo">
+                <a href="./login.html" target="_blank">Login</a>
             </div>
             Header
         </div>
         <div>
-           Content
+            <img src='https://media-cdn.tripadvisor.com/media/photo-w/17/b3/09/b4/by-the-poolside.jpg'>
+            <p> <a href='./payment.html'>Book Now</a></p>
+            <h2>Radisson Blu Hotel</h2>
+            <p>RATING</p>
+            <p>5 star</p>
+            <p>AMENITIES</p>
+            <ul>
+                <li>Room Service</li>
+                <li>Resturant</li>
+                <li>Business center</li>
+                <li>Fitness center</li>
+                <li>Pool</li>
+            </ul>
+            <h5>DESCRIPTION</h5>
+            <p>Lorem ipsum dolor sit amet consectetur</p>
         </div>
         <div>
-            Footer
-         </div>
+            <div>
+                <a href="./contact.html" target="_blank">Contact Us</a>
+            </div>
+            <div>
+                <a href="https://facebook.com" target="_blank"><img src="assests/images/facebook.png" class="social"></a>
+                <a href="https://instagram.com" target="_blank"><img src="assests/images/instagram.png" class="social"></a>
+                <a href="https://twitter.com" target="_blank"><img src="assests/images/twitter.png" class="social"></a>
+
+            </div>
+            <div>
+                &copy 2020 ROOM SEARCH PVT LTD
+            </div>
+        </div>
     </div>
 </body>
 
