--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <head>
     <title>Index</title>
-    <link href="styles/index.css" rel="stylesheet"/>
+    <link href="styles/index.css" rel="stylesheet" />
 </head>
 
 <body>
@@ -10,15 +10,34 @@
         <div>
             <div class="logoClass">
                 <img src='assests/images/logo.png' alt='logo' id="logo">
+                <a href="./login.html" target="_blank">Login</a>
             </div>
             Header
         </div>
         <div>
-           Content
+            <div>Search Bar</div>
+
+            <a href="./list.html" target="_blank"><img src='https://media-cdn.tripadvisor.com/media/photo-s/15/33/fe/a2/new-delhi.jpg' class="city"></a>
+            <img src='https://media-cdn.tripadvisor.com/media/photo-s/15/33/fc/f0/goa.jpg' class="city">
+            <img src='https://media-cdn.tripadvisor.com/media/photo-s/0f/98/f7/df/charminar.jpg' class="city">
+            <img src='https://media-cdn.tripadvisor.com/media/photo-s/15/33/fe/ac/kolkata-calcutta.jpg' class="city">
+
+            <div><a href="./index.html">View More >></a></div>
         </div>
         <div>
-            Footer
-         </div>
+            <div>
+                <a href="./contact.html" target="_blank">Contact Us</a>
+            </div>
+            <div>
+                <a href="https://facebook.com" target="_blank"><img src="assests/images/facebook.png" class="social"></a>
+                <a href="https://instagram.com" target="_blank"><img src="assests/images/instagram.png" class="social"></a>
+                <a href="https://twitter.com" target="_blank"><img src="assests/images/twitter.png" class="social"></a>
+
+            </div>
+            <div>
+                &copy 2020 ROOM SEARCH PVT LTD
+            </div>
+        </div>
     </div>
 </body>
 
