--- a/list.html
+++ b/list.html
@@ -2,7 +2,8 @@
 
 <head>
     <title>List</title>
-    <link href="styles/list.css" rel="stylesheet"/>
+    <link href="styles/index.css" rel="stylesheet" />
+    <link href="styles/list.css" rel="stylesheet" />
 </head>
 
 <body>
@@ -10,15 +11,54 @@
         <div>
             <div class="logoClass">
                 <img src='assests/images/logo.png' alt='logo' id="logo">
+                <a href="./login.html" target="_blank">Login</a>
             </div>
             Header
         </div>
         <div>
-           Content
+            <ul>
+                <li><a href="./list.html">List View</a></li>
+                <li><a href="./list.html">Map View</a></li>
+            </ul>
+            <div>
+                <a href='./detail.html'>
+                    <img src='https://media-cdn.tripadvisor.com/media/photo-w/17/b3/09/b4/by-the-poolside.jpg'>
+                    <h3>Radisson Blu Hotel</h3>
+                    <p>5 star</p>
+                    <p>New Delhi</p>
+                </a>
+            </div>
+            <div>
+                <img src='https://media-cdn.tripadvisor.com/media/photo-w/15/06/31/5f/facade.jpg'>
+                <h3>The Lalit New Delhi</h3>
+                <p>4.5 star</p>
+                <p>New Delhi</p>
+            </div>
+            <div>
+                <img src='https://media-cdn.tripadvisor.com/media/photo-w/1b/4e/9b/11/exterior.jpg'>
+                <h3>Taj Palace</h3>
+                <p>4 star</p>
+                <p>New Delhi</p>
+            </div>
+            <div>
+                <img src='https://cdn.pixabay.com/photo/2018/01/31/05/43/web-3120321_960_720.png'>
+                <p>Map View</p>
+            </div>
         </div>
         <div>
-            Footer
-         </div>
+            <div>
+                <a href="./contact.html" target="_blank">Contact Us</a>
+            </div>
+            <div>
+                <a href="https://facebook.com" target="_blank"><img src="assests/images/facebook.png" class="social"></a>
+                <a href="https://instagram.com" target="_blank"><img src="assests/images/instagram.png" class="social"></a>
+                <a href="https://twitter.com" target="_blank"><img src="assests/images/twitter.png" class="social"></a>
+
+            </div>
+            <div>
+                &copy 2020 ROOM SEARCH PVT LTD
+            </div>
+        </div>
     </div>
 </body>
 
