--- a/payment.html
+++ b/payment.html
@@ -2,7 +2,8 @@
 
 <head>
     <title>Payment</title>
-    <link href="styles/payment.css" rel="stylesheet"/>
+    <link href="styles/index.css" rel="stylesheet" />
+    <link href="styles/payment.css" rel="stylesheet" />
 </head>
 
 <body>
@@ -10,15 +11,46 @@
         <div>
             <div class="logoClass">
                 <img src='assests/images/logo.png' alt='logo' id="logo">
+                <a href="./login.html" target="_blank">Login</a>
             </div>
             Header
         </div>
         <div>
-           Content
+            <div class='hotelDetails'>
+                <img src='https://media-cdn.tripadvisor.com/media/photo-w/17/b3/09/b4/by-the-poolside.jpg'>
+
+                <h2>Radisson Blu Hotel</h2>
+                <p>#38 of 1,289 hotels in New Delhi <br />
+                    National Highway 8, New Delhi 110017 India.
+                </p>
+            </div>
+            <div class='paymentDetails'>
+                <p><strong>Name: </strong> John Doe </p>
+                <p><strong>Number of adults: </strong>2 </p>
+                <p><strong>Check-in Date: </strong>06/06/2020 </p>
+                <p><strong>Check-Out Date: </strong>08/06/2020 </p>
+            </div>
+            <div class='tariffDetails'>
+                <p><b>Tariff Breakdown: </b> Rs 1000*2 Adults * 5 Nights </p>
+                <p><b>Total Amount: </b>Rs 10000 </p>
+
+            </div>
+            <div><a href="./payment.html">Pay Now</a></div>
         </div>
         <div>
-            Footer
-         </div>
+            <div>
+                <a href="./contact.html" target="_blank">Contact Us</a>
+            </div>
+            <div>
+                <a href="https://facebook.com" target="_blank"><img src="assests/images/facebook.png" class="social"></a>
+                <a href="https://instagram.com" target="_blank"><img src="assests/images/instagram.png" class="social"></a>
+                <a href="https://twitter.com" target="_blank"><img src="assests/images/twitter.png" class="social"></a>
+
+            </div>
+            <div>
+                &copy 2020 ROOM SEARCH PVT LTD
+            </div>
+        </div>
     </div>
 </body>
 
