--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,15 @@
 
 <body>
     <div>
-        CONTACT US
+        <form action="./index.html">
+            <p>Thanks for reaching out!!!</p>
+            <p>Please enter your email and we will get back to you.</p>
+
+            <input type="email" id="email" name="email" placeholder="Enter your email" required><br />
+            <button type="submit">
+                Submit
+            </button>
+        </form>
     </div>
 </body>
 
