--- a/index.html
+++ b/index.html
@@ -10,14 +10,19 @@
         <div>
             <div class="logoClass">
                 <img src='assests/images/logo.png' alt='logo' id="logo">
-                <a href="./login.html" target="_blank">Login</a>
+                <a href="./login.html">Login</a>
             </div>
             Header
         </div>
         <div>
-            <div>Search Bar</div>
+            <div>
+                <form action="">
+                    <input type="text" placeholder="City">
+                </form>
+            </div>
 
-            <a href="./list.html" target="_blank"><img src='https://media-cdn.tripadvisor.com/media/photo-s/15/33/fe/a2/new-delhi.jpg' class="city"></a>
+            <a href="./list.html" target="_blank"><img
+                    src='https://media-cdn.tripadvisor.com/media/photo-s/15/33/fe/a2/new-delhi.jpg' class="city"></a>
             <img src='https://media-cdn.tripadvisor.com/media/photo-s/15/33/fc/f0/goa.jpg' class="city">
             <img src='https://media-cdn.tripadvisor.com/media/photo-s/0f/98/f7/df/charminar.jpg' class="city">
             <img src='https://media-cdn.tripadvisor.com/media/photo-s/15/33/fe/ac/kolkata-calcutta.jpg' class="city">
@@ -26,11 +31,13 @@
         </div>
         <div>
             <div>
-                <a href="./contact.html" target="_blank">Contact Us</a>
+                <a href="./contact.html">Contact Us</a>
             </div>
             <div>
-                <a href="https://facebook.com" target="_blank"><img src="assests/images/facebook.png" class="social"></a>
-                <a href="https://instagram.com" target="_blank"><img src="assests/images/instagram.png" class="social"></a>
+                <a href="https://facebook.com" target="_blank"><img src="assests/images/facebook.png"
+                        class="social"></a>
+                <a href="https://instagram.com" target="_blank"><img src="assests/images/instagram.png"
+                        class="social"></a>
                 <a href="https://twitter.com" target="_blank"><img src="assests/images/twitter.png" class="social"></a>
 
             </div>
