--- a/detail.html
+++ b/detail.html
@@ -10,14 +10,32 @@
     <div>
         <div>
             <div class="logoClass">
-                <img src='assests/images/logo.png' alt='logo' id="logo">
+                <a href="./index.html"><img src='assests/images/logo.png' alt='logo' id="logo"></a>
                 <a href="./login.html" target="_blank">Login</a>
             </div>
             Header
         </div>
         <div>
             <img src='https://media-cdn.tripadvisor.com/media/photo-w/17/b3/09/b4/by-the-poolside.jpg'>
-            <p> <a href='./payment.html'>Book Now</a></p>
+            <form action="./payment.html">
+                <label> Adults:</label>
+                <input type="number" id="adults" name="adults" min=1 required>
+                <br />
+                <label>Name:</label>
+                <input type="text" id="Name" name="Name">
+                <br />
+                <label> From Date:</label>
+                <input type="date" id="fromDate" name="fromDate" required>
+                <br />
+                <label> To Date:</label>
+                <input type="date" id="toDate" name="toDate" required>
+                <br />
+                <label>Total:</label>
+                <input type="text" id="price" name="price" value="" readonly><br />
+                <button type="submit">
+                    Book Now
+                </button>
+            </form>
             <h2>Radisson Blu Hotel</h2>
             <p>RATING</p>
             <p>5 star</p>
@@ -37,8 +55,10 @@
                 <a href="./contact.html" target="_blank">Contact Us</a>
             </div>
             <div>
-                <a href="https://facebook.com" target="_blank"><img src="assests/images/facebook.png" class="social"></a>
-                <a href="https://instagram.com" target="_blank"><img src="assests/images/instagram.png" class="social"></a>
+                <a href="https://facebook.com" target="_blank"><img src="assests/images/facebook.png"
+                        class="social"></a>
+                <a href="https://instagram.com" target="_blank"><img src="assests/images/instagram.png"
+                        class="social"></a>
                 <a href="https://twitter.com" target="_blank"><img src="assests/images/twitter.png" class="social"></a>
 
             </div>
