--- a/login.html
+++ b/login.html
@@ -6,7 +6,22 @@
 
 <body>
     <div>
-        LOGIN
+        <form action="./index.html">
+            <label for="first">
+                Username:
+            </label>
+            <input type="text" id="first" name="first" placeholder="Enter your Username" required>
+            <br />
+            <label for="password">
+                Password:
+            </label>
+            <input type="password" id="password" name="password" placeholder="Enter your Password" required>
+            <br />
+            <button type="submit">
+                Login
+            </button>
+
+        </form>
     </div>
 </body>
 
