--- a/payment.html
+++ b/payment.html
@@ -10,7 +10,7 @@
     <div>
         <div>
             <div class="logoClass">
-                <img src='assests/images/logo.png' alt='logo' id="logo">
+                <a href="./index.html"><img src='assests/images/logo.png' alt='logo' id="logo"></a>
                 <a href="./login.html" target="_blank">Login</a>
             </div>
             Header
