--- a/detail.html
+++ b/detail.html
@@ -7,16 +7,16 @@
 </head>
 
 <body>
-    <div>
-        <div>
+    <div class="container">
+        <header>
             <div class="logoClass">
                 <a href="./index.html"><img src='assests/images/logo.png' alt='logo' id="logo"></a>
                 <a href="./login.html" target="_blank">Login</a>
             </div>
             Header
-        </div>
-        <div>
-            <img src='https://media-cdn.tripadvisor.com/media/photo-w/17/b3/09/b4/by-the-poolside.jpg'>
+        </header>
+        <div class="contentClass">
+            <img src='https://media-cdn.tripadvisor.com/media/photo-w/17/b3/09/b4/by-the-poolside.jpg' class="hotelImg">
             <form action="./payment.html">
                 <label> Adults:</label>
                 <input type="number" id="adults" name="adults" min=1 required>
@@ -50,7 +50,7 @@
             <h5>DESCRIPTION</h5>
             <p>Lorem ipsum dolor sit amet consectetur</p>
         </div>
-        <div>
+        <footer>
             <div>
                 <a href="./contact.html" target="_blank">Contact Us</a>
             </div>
@@ -65,7 +65,7 @@
             <div>
                 &copy 2020 ROOM SEARCH PVT LTD
             </div>
-        </div>
+        </footer>
     </div>
 </body>
 
