--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
 </head>
 
 <body>
-    <div>
-        <div>
+    <div class="container">
+        <header>
             <div class="logoClass">
                 <img src='assests/images/logo.png' alt='logo' id="logo">
                 <a href="./login.html">Login</a>
             </div>
             Header
-        </div>
+        </header>
         <div>
             <div>
                 <form action="">
@@ -29,7 +29,7 @@
 
             <div><a href="./index.html">View More >></a></div>
         </div>
-        <div>
+        <footer>
             <div>
                 <a href="./contact.html">Contact Us</a>
             </div>
@@ -44,7 +44,7 @@
             <div>
                 &copy 2020 ROOM SEARCH PVT LTD
             </div>
-        </div>
+        </footer>
     </div>
 </body>
 
