--- a/list.html
+++ b/list.html
@@ -7,45 +7,45 @@
 </head>
 
 <body>
-    <div>
-        <div>
+    <div class="container">
+        <header>
             <div class="logoClass">
                 <a href="./index.html"><img src='assests/images/logo.png' alt='logo' id="logo"></a>
                 <a href="./login.html" target="_blank">Login</a>
             </div>
             Header
-        </div>
-        <div>
+        </header>
+        <div class="contentClass">
             <ul>
-                <li><a href="./list.html">List View</a></li>
-                <li><a href="./list.html">Map View</a></li>
+                <li><a href="#list-view">List View</a></li>
+                <li><a href="#map-view">Map View</a></li>
             </ul>
-            <div>
+            <div id='list-view'>
                 <a href='./detail.html'>
-                    <img src='https://media-cdn.tripadvisor.com/media/photo-w/17/b3/09/b4/by-the-poolside.jpg'>
+                    <img src='https://media-cdn.tripadvisor.com/media/photo-w/17/b3/09/b4/by-the-poolside.jpg' class="hotelImg">
                     <h3>Radisson Blu Hotel</h3>
                     <p>5 star</p>
                     <p>New Delhi</p>
                 </a>
             </div>
             <div>
-                <img src='https://media-cdn.tripadvisor.com/media/photo-w/15/06/31/5f/facade.jpg'>
+                <img src='https://media-cdn.tripadvisor.com/media/photo-w/15/06/31/5f/facade.jpg' class="hotelImg">
                 <h3>The Lalit New Delhi</h3>
                 <p>4.5 star</p>
                 <p>New Delhi</p>
             </div>
             <div>
-                <img src='https://media-cdn.tripadvisor.com/media/photo-w/1b/4e/9b/11/exterior.jpg'>
+                <img src='https://media-cdn.tripadvisor.com/media/photo-w/1b/4e/9b/11/exterior.jpg' class="hotelImg">
                 <h3>Taj Palace</h3>
                 <p>4 star</p>
                 <p>New Delhi</p>
             </div>
-            <div>
+            <div id="map-view">
                 <img src='https://cdn.pixabay.com/photo/2018/01/31/05/43/web-3120321_960_720.png'>
                 <p>Map View</p>
             </div>
         </div>
-        <div>
+        <footer>
             <div>
                 <a href="./contact.html" target="_blank">Contact Us</a>
             </div>
@@ -58,7 +58,7 @@
             <div>
                 &copy 2020 ROOM SEARCH PVT LTD
             </div>
-        </div>
+        </footer>
     </div>
 </body>
 
