--- a/payment.html
+++ b/payment.html
@@ -7,17 +7,17 @@
 </head>
 
 <body>
-    <div>
-        <div>
+    <div class="container">
+        <header>
             <div class="logoClass">
                 <a href="./index.html"><img src='assests/images/logo.png' alt='logo' id="logo"></a>
                 <a href="./login.html" target="_blank">Login</a>
             </div>
             Header
-        </div>
-        <div>
+        </header>
+        <div class="contentClass">
             <div class='hotelDetails'>
-                <img src='https://media-cdn.tripadvisor.com/media/photo-w/17/b3/09/b4/by-the-poolside.jpg'>
+                <img src='https://media-cdn.tripadvisor.com/media/photo-w/17/b3/09/b4/by-the-poolside.jpg' class="hotelImg">
 
                 <h2>Radisson Blu Hotel</h2>
                 <p>#38 of 1,289 hotels in New Delhi <br />
@@ -37,7 +37,7 @@
             </div>
             <div><a href="./payment.html">Pay Now</a></div>
         </div>
-        <div>
+        <footer>
             <div>
                 <a href="./contact.html" target="_blank">Contact Us</a>
             </div>
@@ -50,7 +50,7 @@
             <div>
                 &copy 2020 ROOM SEARCH PVT LTD
             </div>
-        </div>
+        </footer>
     </div>
 </body>
 
